# GraduateProject

./: .gitignore  Database-Interaction.py  Database_Interaction.py  GeographyTest.py  Graph-Structure.py  MoSCoW.md  README.md  Static_Graph_Generator.py  app.py  pyproject.toml
GenerativeSystems/: Dockerfile  app.py  fingerPrintGAN.py  fingerprintgenGAN.py
GenerativeSystems/fingerprintGenerator/: Dockerfile  README.md  app.py  clientSystem.py  fingerprintgenGAN.py  requirements.txt
GenerativeSystems/identityGenerator/: Passport-Gen.py  README.md  app.py
ProjectionFrontEnd/: finalVis.html  fingerprint_show.html  index.html  sockettest.html
RaspberryPiFrontEnds/: 4BCLIstuff.py  PiZeroStuff.py
