[tool.poetry]
name = "graduateproject"
version = "0.1.0"
description = ""
authors = ["Kourosh Simpkins <kouroshsimpkins@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.16.1"
networkx = "^3.3"
faker = "^25.3.0"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
