[tool.poetry]
name = "graduateproject"
version = "0.1.0"
description = ""
authors = ["Kourosh Simpkins <kouroshsimpkins@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.16.1"
networkx = "^3.3"
faker = "^25.3.0"
matplotlib = "^3.9.0"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
flask = "^3.0.3"
flask-cors = "^4.0.1"
flask-socketio = "^5.3.6"
geopy = "^2.4.1"
websockets = "^12.0"
python-socketio = "^5.11.3"
websocket-client = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
